--- a/app/less/layout.less
+++ b/app/less/layout.less
@@ -50,12 +50,12 @@ body {
 }
 
 
-#wrapper {
+.wrapper {
   margin: 0 0px 0 @menu-width;
   padding: 0;
   background: @color-background;
   border-left: 1px solid @border-color;
-  transition: all 0.4s ease 0s;
+  //transition: all 0.4s ease 0s;
   position: relative;
   min-height: 100%;
 }
@@ -120,7 +120,7 @@ body {
 
 }
 
-.fixed-navbar #wrapper {
+.fixed-navbar .wrapper {
   top: 62px;
 }
 
