--- a/app/less/various.less
+++ b/app/less/various.less
@@ -182,10 +182,9 @@ footer, .push {
 
 /* for Embedded view */
 
-.embed_content {
-  padding-top: 87px;
+.embed_header {
+  padding-top: 62px;
 }
-
 
 /* Opacity */
 .opacity-0 {
