--- a/app/components/common/header/header_big.html
+++ b/app/components/common/header/header_big.html
@@ -9,10 +9,12 @@
 
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb">
-                    <li><a href="{{'/' + header.community.key}}">
-                        <span ng-if="header.community.community_profiles[nav.location]">{{ header.community.community_profiles[nav.location].name }}</span>
-                        <span ng-if="!header.community.community_profiles[nav.location]">{{ header.community.profile.name }}</span>
-                            &nbsp;&nbsp;/</a></li>
+                    <li ng-if="header.location.profile.name"><a ui-sref="{{header.parent_url}}">
+                        <span ng-if="header.location.key !== header.community.key">{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
+                    </li>
+                    <li><span ng-if="header.community.community_profiles[nav.location]">&nbsp;{{ header.community.community_profiles[nav.location].name }}</span>
+                        <span ng-if="!header.community.community_profiles[nav.location]">&nbsp;{{ header.community.profile.name }}&nbsp;&nbsp;/</span>
+                    </li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
                         <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
                         <span ng-if="$last">&nbsp;&nbsp;{{$state.params.pageTitle}}</span>
