--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -1,16 +1,21 @@
 <div class="small-header">
     <div class="hpanel">
         <div class="panel-body">
-            <div id="hbreadcrumb" class="pull-right">
+            <div id="hbreadcrumb" class="pull-left">
                 <ol class="hbreadcrumb">
-                    <li><a href="{{'/' + header.community.key}}">{{ header.community.profile.name }}&nbsp;&nbsp;/</a></li>
+                    <li ng-if="header.location.profile.name"><a ui-sref="{{header.parent_url}}">
+                        <span ng-if="header.location.key !== header.community.key">{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
+                    </li>
+                    <li><span ng-if="header.community.community_profiles[nav.location]">&nbsp;{{ header.community.community_profiles[nav.location].name }}</span>
+                        <span ng-if="!header.community.community_profiles[nav.location]">&nbsp;{{ header.community.profile.name }}&nbsp;&nbsp;/</span>
+                    </li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
                         <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
-                        <span ng-if="$last">&nbsp;&nbsp;{{$state.params.pageTitle}}</span>
+                        <span ng-if="$last">&nbsp;{{$state.params.pageTitle}}</span>
                     </li>
                 </ol>
             </div>
-            <h2 class="font-light m-b-xs">
+            <h2 class="font-light pull-right m-b-xs">
                 <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="header.community.type !== 'user' && header.community.type !== 'startup'">in {{ header.community.profile.name }}</span>
                 </span>
             </h2>
