--- a/app/less/various.less
+++ b/app/less/various.less
@@ -410,7 +410,7 @@ footer, .push {
   background: @color-bright;
 }
 
-#side-menu li a {
+#side-menu li a, #side-menu li p {
   color: #999;
   text-transform: uppercase;
   font-weight: 500;
