--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -66,28 +66,27 @@
         <ul side-navigation class="nav" id="side-menu" style="border-top: 1px solid #eee;">
 
             <li class="active" ng-if="nav.community.type !== 'user' && nav.community.type !== 'startup'">
-                <p style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
+                <a style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
     padding-right: 7px;"></span><span class="nav-label">Community</span>
                     <span class="fa fa-gear pull-right" ng-click="nav.changeLocation()" tooltip="Change" style="opacity: .6; margin-top: 4px; cursor: pointer;"></span>
-                </p>
+                </a>
                 <ul class="nav nav-second-level">
                     <li>
                         <a style="cursor: default;" ng-class="{active: nav.path.includes('/' + nav.community.key)}">
-
-                            <span ng-if="nav.community.community_profiles[nav.location]">
-                                <i ng-if="nav.community.community_profiles[nav.location].icon" ng-class="'fa ' + nav.community.community_profiles[nav.location].icon"></i>
-                                <i ng-if="!nav.community.community_profiles[nav.location].icon" class="fa fa-globe"></i>
-                                &nbsp;&nbsp;{{nav.community.community_profiles[nav.location].name}}</span>
-                            <span ng-if="!nav.community.community_profiles[nav.location]">
+                            <span ng-if="nav.community.community_profiles[nav.location_key]">
+                                <i ng-if="nav.community.community_profiles[nav.location_key].icon" ng-class="'fa ' + nav.community.community_profiles[nav.location_key].icon"></i>
+                                <i ng-if="!nav.community.community_profiles[nav.location_key].icon" class="fa fa-globe"></i>
+                                &nbsp;&nbsp;{{nav.community.community_profiles[nav.location_key].name}}</span>
+                            <span ng-if="!nav.community.community_profiles[nav.location_key]">
                                 <i ng-if="nav.community.profile.icon" ng-class="'fa ' + nav.community.profile.icon"></i>
                                 <i ng-if="!nav.community.profile.icon" class="fa fa-globe"></i>
                                     &nbsp;&nbsp;{{nav.community.profile.name}}</span>
-                            </a>
+                        </a>
                         <ul style="display: block;">
-                            <li ui-sref="people.dashboard({community_key: nav.community.key, parent_key: nav.location, query: '*'})" ui-sref-active="active">
+                            <li ui-sref="people.dashboard({community_key: nav.community.key, parent_key: nav.location_key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
-                            <li ui-sref="startups.dashboard({community_key: nav.community.key, parent_key: nav.location, query: '*'})" ui-sref-active="active">
+                            <li ui-sref="startups.dashboard({community_key: nav.community.key, parent_key: nav.location_key, query: '*'})" ui-sref-active="active">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
@@ -119,9 +118,9 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
                         <a ui-sref="industry.dashboard({community_key: nav.community.key, parent_key: item.key, community: item})" ng-class="{active: nav.path.endsWith('/' + item.key)}">
-                            <span ng-if="item.community_profiles[nav.location]">
-                                <i ng-class="'fa ' + item.community_profiles[nav.location].icon"></i>&nbsp;&nbsp;{{item.community_profiles[nav.location].name}}</span>
-                            <span ng-if="!item.community_profiles[nav.location]">
+                            <span ng-if="item.community_profiles[nav.location_key]">
+                                <i ng-class="'fa ' + item.community_profiles[nav.location_key].icon"></i>&nbsp;&nbsp;{{item.community_profiles[nav.location_key].name}}</span>
+                            <span ng-if="!item.community_profiles[nav.location_key]">
                                 <i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</span>
                         </a>
                         <ul ng-if="nav.community.key == item.key">
