good progress, why no community on bio/people

--- a/app/components/common/header/header_big.html
+++ b/app/components/common/header/header_big.html
@@ -9,11 +9,11 @@
 
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb">
-                    <li ng-if="header.location.profile.name"><a ui-sref="{{header.parent_url}}">
-                        <span ng-if="header.location.key !== header.community.key">{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
+                    <li ng-if="header.location.key !== header.community.key"><a ui-sref="{{header.parent_state}}">
+                        <span ng-if="header.location.profile.name">&nbsp;&nbsp;{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
                     </li>
-                    <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location]">&nbsp;{{ header.community.community_profiles[nav.location].name }}</span>
-                        <span ng-if="!header.community.community_profiles[nav.location]">&nbsp;{{ header.community.profile.name }}</span>
+                    <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.community_profiles[nav.location_key].name }}</span>
+                        <span ng-if="!header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.profile.name }}</span>
                         &nbsp;&nbsp;/
                     </li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
@@ -23,8 +23,8 @@
                 </ol>
             </div>
             <h2 class="font-light m-b-xs">
-                <span ng-if="header.community.community_profiles[nav.location]">{{ header.community.community_profiles[nav.location].name }}</span>
-                <span ng-if="!header.community.community_profiles[nav.location]">{{ header.community.profile.name }}</span>
+                <span ng-if="header.community.community_profiles[nav.location_key]">{{ header.community.community_profiles[nav.location_key].name }}</span>
+                <span ng-if="!header.community.community_profiles[nav.location_key]">{{ header.community.profile.name }}</span>
             </h2>
             <small>{{ header.community.profile.description }}</small>
         </div>
