--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -6,8 +6,8 @@
                     <li ng-if="header.location.key !== header.community.key"><a ui-sref="{{header.parent_state}}">
                         <span ng-if="header.location.profile.name">&nbsp;&nbsp;{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
                     </li>
-                    <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location]">&nbsp;&nbsp;{{ header.community.community_profiles[nav.location].name }}</span>
-                        <span ng-if="!header.community.community_profiles[nav.location]">&nbsp;&nbsp;{{ header.community.profile.name }}</span>
+                    <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.community_profiles[nav.location_key].name }}</span>
+                        <span ng-if="!header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.profile.name }}</span>
                         &nbsp;&nbsp;/
                     </li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
