--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -3,8 +3,8 @@
         <div class="panel-body">
             <div id="hbreadcrumb" class="pull-left">
                 <ol class="hbreadcrumb">
-                    <li ng-if="header.location.key !== header.community.key"><a ui-sref="{{header.parent_state}}">
-                        <span ng-if="header.location.profile.name">&nbsp;&nbsp;{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
+                    <li ng-if="nav.location_key !== header.community.key"><a ui-sref="{{header.parent_state}}">
+                        <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
                     </li>
                     <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.community_profiles[nav.location_key].name }}</span>
                         <span ng-if="!header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.profile.name }}</span>
@@ -17,7 +17,7 @@
                 </ol>
             </div>
             <h2 class="font-light pull-right m-b-xs">
-                <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="header.community.type !== 'user' && header.community.type !== 'startup'">in {{ header.community.profile.name }}</span>
+                <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="header.community.type !== 'user' && header.community.type !== 'startup'">in {{ header.community.community_profiles[nav.location_key].name || header.community.profile.name }}</span>
                 </span>
             </h2>
         </div>
