all nav fucking working finally

--- a/app/components/common/header/header_big.html
+++ b/app/components/common/header/header_big.html
@@ -9,11 +9,11 @@
 
             <div id="hbreadcrumb" class="pull-right m-t-lg">
                 <ol class="hbreadcrumb">
-                    <li ng-if="header.location.key !== header.community.key"><a ui-sref="{{header.parent_state}}">
-                        <span ng-if="header.location.profile.name">&nbsp;&nbsp;{{ header.location.profile.name }}&nbsp;&nbsp;/</span></a>
+                    <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{nav.location.type + '.dashboard({community: nav.location})'}}">
+                        <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
                     </li>
-                    <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.community_profiles[nav.location_key].name }}</span>
-                        <span ng-if="!header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.profile.name }}</span>
+                    <li ui-sref="{{nav.community.type + '.dashboard({community_path: nav.community.key, community: nav.community})'}}"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
+                        <span ng-if="!nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.profile.name }}</span>
                         &nbsp;&nbsp;/
                     </li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
@@ -23,10 +23,10 @@
                 </ol>
             </div>
             <h2 class="font-light m-b-xs">
-                <span ng-if="header.community.community_profiles[nav.location_key]">{{ header.community.community_profiles[nav.location_key].name }}</span>
-                <span ng-if="!header.community.community_profiles[nav.location_key]">{{ header.community.profile.name }}</span>
+                <span ng-if="nav.community.community_profiles[nav.location_path]">{{ nav.community.community_profiles[nav.location_path].name }}</span>
+                <span ng-if="!nav.community.community_profiles[nav.location_path]">{{ nav.community.profile.name }}</span>
             </h2>
-            <small>{{ header.community.profile.description }}</small>
+            <small>{{ nav.community.profile.description }}</small>
         </div>
     </div>
 </div>
