--- a/app/components/common/header/header_small.html
+++ b/app/components/common/header/header_small.html
@@ -3,12 +3,12 @@
         <div class="panel-body">
             <div id="hbreadcrumb" class="pull-left">
                 <ol class="hbreadcrumb">
-                    <li ng-if="nav.location_key !== header.community.key"><a ui-sref="{{header.parent_state}}">
+                    <li ng-if="nav.location_path && (nav.location.key !== nav.community.key)"><a ui-sref="{{nav.location.type + '.dashboard({community: nav.location})'}}">
                         <span ng-if="nav.location.profile.name">&nbsp;&nbsp;{{ nav.location.profile.name }}&nbsp;&nbsp;/</span></a>
                     </li>
-                    <li ui-sref="{{header.community.key}}"><span ng-if="header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.community_profiles[nav.location_key].name }}</span>
-                        <span ng-if="!header.community.community_profiles[nav.location_key]">&nbsp;&nbsp;{{ header.community.profile.name }}</span>
-                        &nbsp;&nbsp;/
+                    <li><a ui-sref="{{nav.community.type + '.dashboard({community_path: nav.community.key, community: nav.community})'}}"><span ng-if="nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.community_profiles[nav.location_path].name }}</span>
+                        <span ng-if="!nav.community.community_profiles[nav.location_path]">&nbsp;&nbsp;{{ nav.community.profile.name }}</span>
+                        &nbsp;&nbsp;/</a>
                     </li>
                     <li ng-repeat="state in $state.$current.path" ng-class="{active: $last}">
                         <a ng-if="state.params.pageTitle.config.value && !(!!state.abstract) && !$last" href="#{{state.url.format($stateParams)}}">&nbsp;&nbsp;{{state.params.pageTitle.config.value}}&nbsp;&nbsp;/</a>
@@ -17,7 +17,7 @@
                 </ol>
             </div>
             <h2 class="font-light pull-right m-b-xs">
-                <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="header.community.type !== 'user' && header.community.type !== 'startup'">in {{ header.community.community_profiles[nav.location_key].name || header.community.profile.name }}</span>
+                <span style="text-transform: none;">{{ $state.params.pageTitle }}&nbsp;<span ng-if="nav.community.type !== 'user' && nav.community.type !== 'startup'">in {{ nav.community.community_profiles[nav.location_path].name || nav.community.profile.name }}</span>
                 </span>
             </h2>
         </div>
