--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -50,43 +50,47 @@
             <div ng-if="nav.user" class="container side-menu" style="padding-top: 10px; margin-left: -20px; border-bottom: 1px solid #eee;    margin-bottom: -5px;">
                 <div class="row side-menu">
                     <div class="col-sm-3">
-                        <a ui-sref="people.profile({profile: nav.user, community_key: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
+                        <a ui-sref="people.profile({profile: nav.user, location_path: nav.user.key, community: {}})"><img class="img-circle m-b" ng-src="{{nav.user.profile.avatar || nav.user.profile.linkedin.pictureUrl || 'images/blank_avatar.png'}}" alt="{{nav.user.profile.name}}" style="height: 40px; width: 40px; "/></a>
                     </div>
                     <div class="col-sm-9" style="padding-top: 3px; white-space: nowrap;">
-                        <a ui-sref="people.profile({profile: nav.user, community_key: nav.user.key, community: {}})">{{nav.user.profile.name}}</a>
+                        <a ui-sref="people.profile({profile: nav.user, location_path: nav.user.key, community: {}})">{{nav.user.profile.name}}</a>
                         <div style="margin-left: -10px; padding-top: 1px;">
                             <span ng-repeat="(item, val) in nav.user.roles" class="user-role"><i ng-attr-title="{{item[0].toUpperCase() + item.slice(1);}}" ng-class="{'text-primary fa fa-rocket' : item == 'founder', 'text-info fa fa-graduation-cap' : item == 'advisor', 'text-success fa fa-leaf' : item == 'investor', 'text-danger fa fa-flag' : item == 'leader'}"></i></span>
                         </div>
                     </div>
                 </div>
             </div>
-            <div ng-if="nav.community.profile.logo" style="margin-left: -21px;"><img style="width:182px; border: 1px solid #ddd;" ng-src="{{nav.community.profile.logo}}"/></div>
+            <div ng-if="nav.location.profile.logo" style="margin-left: -21px;"><img style="width:182px; border: 1px solid #ddd;" ng-src="{{nav.location.profile.logo}}"/></div>
         </div>
 
         <ul side-navigation class="nav" id="side-menu" style="border-top: 1px solid #eee;">
 
-            <li class="active" ng-if="nav.community.type !== 'user' && nav.community.type !== 'startup'">
+            <li class="active" ng-if="nav.location.type !== 'user' && nav.location.type !== 'startup'">
                 <a style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
-    padding-right: 7px;"></span><span class="nav-label">Community</span>
+    padding-right: 7px;"></span><span class="nav-label">
+
+                    Community
+
+                </span>
                     <span class="fa fa-gear pull-right" ng-click="nav.changeLocation()" tooltip="Change" style="opacity: .6; margin-top: 4px; cursor: pointer;"></span>
                 </a>
                 <ul class="nav nav-second-level">
                     <li>
-                        <a style="cursor: default;" ng-class="{active: nav.path.includes('/' + nav.community.key)}">
-                            <span ng-if="nav.community.community_profiles[nav.location_key]">
-                                <i ng-if="nav.community.community_profiles[nav.location_key].icon" ng-class="'fa ' + nav.community.community_profiles[nav.location_key].icon"></i>
-                                <i ng-if="!nav.community.community_profiles[nav.location_key].icon" class="fa fa-globe"></i>
-                                &nbsp;&nbsp;{{nav.community.community_profiles[nav.location_key].name}}</span>
-                            <span ng-if="!nav.community.community_profiles[nav.location_key]">
-                                <i ng-if="nav.community.profile.icon" ng-class="'fa ' + nav.community.profile.icon"></i>
-                                <i ng-if="!nav.community.profile.icon" class="fa fa-globe"></i>
-                                    &nbsp;&nbsp;{{nav.community.profile.name}}</span>
+                        <a ui-sref="{{nav.location.type + '.dashboard({community: nav.location})'}}" ng-class="{active: nav.path().includes('/' + nav.location.key)}">
+                            <span ng-if="nav.location.community_profiles[nav.location_path]">
+                                <i ng-if="nav.location.community_profiles[nav.location_path].icon" ng-class="'fa ' + nav.location.community_profiles[nav.location_path].icon"></i>
+                                <i ng-if="!nav.location.community_profiles[nav.location_path].icon" class="fa fa-globe"></i>
+                                &nbsp;&nbsp;{{nav.location.community_profiles[nav.location_path].name}}</span>
+                            <span ng-if="!nav.location.community_profiles[nav.location_path]">
+                                <i ng-if="nav.location.profile.icon" ng-class="'fa ' + nav.location.profile.icon"></i>
+                                <i ng-if="!nav.location.profile.icon" class="fa fa-globe"></i>
+                                    &nbsp;&nbsp;{{nav.location.profile.name}}</span>
                         </a>
-                        <ul style="display: block;">
-                            <li ui-sref="people.dashboard({community_key: nav.community.key, location: nav.location, location_key: nav.location_key, query: '*'})" ui-sref-active="active">
+                        <ul ng-show="nav.path().endsWith(nav.location_path + '/people') || nav.path().endsWith(nav.location_path + '/startups') || nav.path().endsWith(nav.location_path)" style="display: block;">
+                            <li ui-sref="people.dashboard" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
-                            <li ui-sref="startups.dashboard({community_key: nav.community.key, location, nav.location, location_key: nav.location_key, query: '*'})" ui-sref-active="active">
+                            <li ui-sref="startups.dashboard" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/startups') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
                             </li>
                         </ul>
@@ -96,38 +100,58 @@
 
             <li class="active" ng-if="nav.locations">
                 <p style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
-    padding-right: 7px;"></span><span class="nav-label">Locations</span></p>
+    padding-right: 7px;"></span><span class="nav-label">
+
+                    Locations
+
+                </span></p>
                 <ul class="nav nav-second-level">
-                    <li ng-repeat="item in nav.locations" ng-if="item.key !== nav.community.key">
-                        <a ui-sref="location.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes('/' + item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                    <li ng-repeat="item in nav.locations" ng-if="item.key !== nav.community_path">
+                        <a ui-sref="location.dashboard({location_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                     </li>
                 </ul>
             </li>
 
             <li class="active" ng-if="nav.industries">
                 <p style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
-    padding-right: 7px;"></span><span class="nav-label">Industries</span></p>
+    padding-right: 7px;"></span><span class="nav-label">
+
+                    Industries
+
+                </span></p>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.industries">
-                        <a ui-sref="industry.dashboard({community_key: nav.community.key, parent_key: item.key, community: item})" ng-class="{active: nav.path.endsWith('/' + item.key)}">
-                            <span ng-if="item.community_profiles[nav.location_key]">
-                                <i ng-class="'fa ' + item.community_profiles[nav.location_key].icon"></i>&nbsp;&nbsp;{{item.community_profiles[nav.location_key].name}}</span>
-                            <span ng-if="!item.community_profiles[nav.location_key]">
+                        <a ui-sref="industry.dashboard({community_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}">
+                            <span ng-if="item.community_profiles[nav.location_path]">
+                                <i ng-class="'fa ' + item.community_profiles[nav.location_path].icon"></i>&nbsp;&nbsp;{{item.community_profiles[nav.location_path].name}}</span>
+                            <span ng-if="!item.community_profiles[nav.location_path]">
                                 <i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</span>
                         </a>
+                        <ul ng-if="nav.path().includes('/' + item.key)">
+                            <li ui-sref="people.dashboard({location_path: nav.location_path, community_path: item.key, location: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/people') }">
+                                <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
+                            </li>
+                            <li ui-sref="startups.dashboard({location_path: nav.location_path, community_path: item.key, location: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith('/startups') }">
+                                <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;Startups</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </li>
 
             <li class="active" ng-if="nav.networks">
                 <p style="cursor: default;"><span class="pe-7s-angle-down" style="padding-top: 4px;
-    padding-right: 7px;"></span><span class="nav-label">Networks</span></p>
+    padding-right: 7px;"></span><span class="nav-label">
+
+                    Networks
+
+                </span></p>
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
-                        <a ui-sref="network.dashboard({community_key: item.key, community: item})" ng-class="{active: nav.path.includes('/' + item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
+                        <a ui-sref="network.dashboard({location_path: item.key, community: item})" ng-class="{active: nav.path().includes('/' + item.key)}"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
 
                             <!--
-                            <li ng-if="nav.path.endsWith('/people')" class="nav-third-level" ui-sref="people.invite">
+                            <li ng-if="nav.path().endsWith('/people')" class="nav-third-level" ui-sref="people.invite">
                                 <a>+&nbsp;&nbsp;Invite People</a>
                             </li>
                             -->
