--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -86,7 +86,7 @@
                                 <i ng-if="!nav.location.profile.icon" class="fa fa-globe"></i>
                                     &nbsp;&nbsp;{{nav.location.profile.name}}</span>
                         </a>
-                        <ul ng-show="nav.path().endsWith(nav.location_path + '/people') || nav.path().endsWith(nav.location_path + '/startups') || nav.path().endsWith(nav.location_path)" style="display: block;">
+                        <ul ng-show="nav.path().endsWith(nav.location_path + '/people') || nav.path().endsWith(nav.location_path + '/startups') || nav.path().endsWith(nav.location_path + '/search') || nav.path().endsWith(nav.location_path)" style="display: block;">
                             <li ui-sref="user.list({location_path: nav.location.key, community: nav.location, query: '*'})" ng-class="{ 'active' : nav.path().endsWith(nav.location_path + '/people') }">
                                 <a><i class="fa fa-caret-right"></i>&nbsp;&nbsp;People</a>
                             </li>
