--- a/app/components/common/header/header_big.html
+++ b/app/components/common/header/header_big.html
@@ -1,6 +1,6 @@
 <div small-header class="normalheader transition">
     <div class="hpanel">
-        <div class="panel-body">
+        <div class="panel-body" ng-class="'header-embedded' : nav.embedded">
             <a ng-click="small()" href="">
                 <div class="clip-header">
                     <i class="fa fa-arrow-up"></i>
