fixed embed nav

--- a/app/components/common/header/header_big.html
+++ b/app/components/common/header/header_big.html
@@ -1,7 +1,7 @@
-<div small-header class="normalheader transition">
+<div small-header class="normalheader transition" ng-class="{'header-embedded' : nav.embedded}">
     <div class="hpanel">
-        <div class="panel-body" ng-class="'header-embedded' : nav.embedded">
-            <a ng-click="small()" href="">
+        <div class="panel-body">
+            <a ng-click="small()">
                 <div class="clip-header">
                     <i class="fa fa-arrow-up"></i>
                 </div>
