--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,8 +1,8 @@
 /* Custom */
 
 .header-embedded {
-  padding-left: 0;
-  padding-right: 0;
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
 
 .ui-select-highlight {
