hack for contact form

--- a/app/components/users/user.contact.html
+++ b/app/components/users/user.contact.html
@@ -2,14 +2,14 @@
     <div class="color-line"></div>
     <div class="modal-header">
         <h4 class="modal-title">Contact {{contact.user.profile.name}}</h4>
-        <p class="font-bold">Before we connect you, we'll need to know a few things:</p>
+        <p class="font-bold">Before we connect you, we will need to know a few things:</p>
     </div>
     <div class="modal-body">
         <form role="form" name="contact.form" novalidate ng-submit="contact.send()">
             <div class="form-group">
                 <input type="text" placeholder="Your name.." class="form-control input-lg" required name="name" ng-model="contact.form.name_value">
                 <div class="m-t-xs" ng-show="contact.form.name.$invalid && contact.form.submitted">
-                    <span class="text-danger" ng-show="contact.form.name.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Don't forget your name!</span>
+                    <span class="text-danger" ng-show="contact.form.name.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> You forgot your name!</span>
                 </div>
             </div>
             <div class="form-group">
@@ -24,7 +24,7 @@
             <div class="form-group">
                 <input type="text" placeholder="Reason for contact.." class="form-control input-lg" required name="reason" ng-model="contact.form.reason_value">
                 <div class="m-t-xs" ng-show="contact.form.reason.$invalid && contact.form.submitted">
-                    <span class="text-danger" ng-show="contact.form.reason.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please tell us why you'd like to get in touch with {{contact.user.profile.name.split(' ')[0]}}.</span>
+                    <span class="text-danger" ng-show="contact.form.reason.$error">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> Please tell us why you would like to get in touch with {{contact.user.profile.name.split(" ")[0]}}.</span>
                 </div>
             </div>
         </form>
