--- a/app/components/common/nav/nav.html
+++ b/app/components/common/nav/nav.html
@@ -11,7 +11,7 @@
             <div class="navbar-left">
                 <div class="nav navbar-nav no-borders" style="white-space: nowrap;">
                     <li style="float: left;">
-                        <a onclick="$('#searchform').submit()">
+                        <a ng-click="$('#searchform').submit()">
                             <i class="pe-7s-search"></i>
                         </a>
                     </li>
@@ -30,6 +30,11 @@
                         </div>
                     </li>
                     <li class="dropdown">
+                        <a>
+                            <i class="pe-7s-bell"></i>
+                        </a>
+                    </li>
+                    <li id="knowtify" class="dropdown">
                         <a>
                             <i class="pe-7s-help1"></i>
                         </a>
